@@ -3,6 +3,8 @@
 
 #include <string>
 
+struct passwd;
+
 namespace FBB
 {
 class User
@@ -16,9 +18,15 @@ class User
     size_t d_gid;
 
     public:
-        User();
-        User(User &&tmp);
+        User();                         // 1.cc
+        User(std::string const &name);  // 2.cc details of user 'name'
+        User(size_t uid);               // 3.cc details of user whose ID is 
+                                        //      uid
 
+        User(User const &other) = default;
+        User(User &&tmp);               // 4.cc
+
+        User &operator=(User const &rhs) = default;
         User &operator=(User &&tmp);
 
         void verify() const;        // kept for bacward compatibility
@@ -34,6 +42,10 @@ class User
         std::string const &password() const;                        // .f
         std::string const &realname() const;                        // .f
         std::string const &shell() const;                           // .f
+
+    private:
+        void assign(passwd const *pwd); // assign pwd fields to this object
+        static void failure();          // throws Exception
 };
 
 #include "groupid.f"
